# exotic-dicoms

./: .gitignore  README.md  pyproject.toml
exotic_dicoms/test/: data.py
scripts/: build.py  test.py
